# scoring_pipeline

./: .gitignore  Makefile  README.md  commands.py  pyproject.toml
configs/: base_params.toml  config.py  data_prep.toml  model.toml  names_mapper.toml
data_prep/: normalize_raw_data.py  sample_prep.py
features/: cat_features.py  macro_features.py  num_features.py  sfa.py
models/: mlops.py  model_validator.py  sfa.py  train.py
utils/: basic_utils.py
validation/: adversarial_val.py  ks_test.py  model_report.py  psi.py  sfa_report.py  validation.py
