[tool.poetry]
name = "scoring-pipeline"
version = "0.1.0"
description = "Scoring RnD pipeline"
authors = ["Shuhrat Khalilbekov <khalilbekov92@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
pip = ">=20.0.2"
requests = "2.28.2"
numpy = ">=1.20.3"
pandas = ">=1.3.4"
python-box = "^6.0.2"
PyYAML = "^6.0"
python-dotenv = "0.20.0"
catboost = "^1.0.6"
scikit-learn = "1.2"
openpyxl = "^3.1.2"
optuna = "^3.3.0"
zypl-macro = "^1.0.5"
nbformat = "^5.9.2"
ipykernel = "^6.25.2"
dynaconf = "^3.2.3"
lightgbm = "^4.1.0"
seaborn = "^0.13.0"
fire = "^0.5.0"
fpdf2 = "2.7.7" 
shap = "0.43.0"
wonderwords = "2.2"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
black = "22.6.0"
pytest = "^7.1.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"

[tool.isort]
line_length = 88
multi_line_output = 5

[tool.black]
line-length = 88
target-version = ["py38"]
skip-string-normalization = true
skip-magic-trailing-comma = true

[tool.pylint.'FORMAT']
min-similarity-lines = 10
fail-under = 9.7
py-version = 3.9
good-names=[
    'bp',
    'db',
    'i',
    'j',
    'k',
    'ex',
    'Run',
    'x', 'x1', 'x2', 'x3', 'x4', 'x5',
    'y',
    'G',
    'H',
    'h',
    'df',
    'MLP',
]
max-line-length = 120
ignored-classes = [
    'scoped_session', 'json', 'Column',
]
disable = [
    'locally-disabled', 'suppressed-message',
    'missing-module-docstring', 'missing-class-docstring',
    'missing-function-docstring', 'too-few-public-methods',
    'wrong-import-position', 'import-outside-toplevel',
    'fixme', 'too-many-locals', 'too-many-arguments',
    'too-many-instance-attributes', 'c-extension-no-member'
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
